# pooii-tarea-5-entrega-17-06-otreblan

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: env.hpp  notifier.hpp  parking.hpp  readline.hpp  tables.hpp  user.hpp
pkg/: CMakeLists.txt
pkg/arch/: .gitignore  PKGBUILD
pkg/ubuntu/: CMakeLists.txt
src/: CMakeLists.txt  env.cpp  main.cpp  notifier.cpp  parking.cpp  readline.cpp  tables.cpp  user.cpp
